tests/error/class-7.moc
@class Point {
    int x;
    int y;
}

-(void) x:(int)a x:(void)b {
}

@end
